--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rollup Template</title>
 </head>
 <body>
-    <script src="./bundle.js"></script>
+    <script type="module" src="./bundle.js"></script>
 </body>
 </html>
